users json added

--- a/web/polymer-elements/bar-chart/bar-chart.html
+++ b/web/polymer-elements/bar-chart/bar-chart.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
 
-<polymer-element name="bar-chart" class="dc-element" attributes="param type xMin xMax width xLabel gap">
+<polymer-element name="bar-chart" class="dc-element" attributes="param type xMin xMax width xLabel gap stream">
 
 
   <template>
@@ -17,6 +17,7 @@
             chart: {},
             dimension: {},
             group: {},
+            stream: 1,
             xMin: 0,
             xMax: 100,
 
