--- a/web/dashboardTweet.html
+++ b/web/dashboardTweet.html
@@ -346,7 +346,7 @@
                                 </div>
                                 <!-- box-body -->
                                 <div class="box-body chart-responsive" style="padding: 0">
-                                    <user-panel class="dc-element"></user-panel>
+                                    <user-panel stream="2" class="dc-element"></user-panel>
                                 </div>
                                 <!-- /.box-body -->
                             </div>
@@ -363,6 +363,55 @@
                             </div>
                         </section>
                         <!-- right col -->
+
+                        <section class="col-lg-3 connectedSortable">
+
+                            <!-- bar-chart -->
+                            <!--Widgets must have 'widget' class in order to render their loading screen-->
+                            <div class="box box-primary widget">
+                                <div class="box-header">
+                                    <i class="glyphicon glyphicon-star"></i>
+                                    <h3 class="box-title">Followers</h3>
+                                </div>
+                                <!-- box-body -->
+                                <div class="box-body chart-responsive" style="overflow: hidden">
+                                    <bar-chart stream="2" param="followers_count" xLabel="followers count" width=400 xMin="0" xMax="50" gap="1" class="dc-element"></bar-chart>
+                                </div>
+                                <!-- /.box-body -->
+                            </div>
+                            <!-- /.bar-chart -->
+
+                            <!-- bar-chart -->
+                            <!--Widgets must have 'widget' class in order to render their loading screen-->
+                            <div class="box box-primary widget">
+                                <div class="box-header">
+                                    <i class="glyphicon glyphicon-star"></i>
+                                    <h3 class="box-title">Friends</h3>
+                                </div>
+                                <!-- box-body -->
+                                <div class="box-body chart-responsive" style="overflow: hidden">
+                                    <bar-chart stream="2" param="friends_count" xLabel="friends count" width=400 xMin="0" xMax="500" gap="0.01" class="dc-element"></bar-chart>
+                                </div>
+                                <!-- /.box-body -->
+                            </div>
+                            <!-- /.bar-chart -->
+
+                            <!-- bar-chart -->
+                            <!--Widgets must have 'widget' class in order to render their loading screen-->
+                            <div class="box box-primary widget">
+                                <div class="box-header">
+                                    <i class="glyphicon glyphicon-star"></i>
+                                    <h3 class="box-title">Favourites</h3>
+                                </div>
+                                <!-- box-body -->
+                                <div class="box-body chart-responsive" style="overflow: hidden">
+                                    <bar-chart stream="2" param="favourites_count" xLabel="favourites count" width=400 xMin="0" xMax="500" gap="0.01" class="dc-element"></bar-chart>
+                                </div>
+                                <!-- /.box-body -->
+                            </div>
+                            <!-- /.bar-chart -->
+
+                        </section>
 
                     </div>
 
