--- a/web/polymer-elements/bar-chart/bar-chart.html
+++ b/web/polymer-elements/bar-chart/bar-chart.html
@@ -60,7 +60,7 @@
                             .dimension(this.dimension)
                             .group(this.group)
                             .x(d3.time.scale().domain([new Date(this.dimension.bottom(1)[0][p].value), new Date(this.dimension.top(1)[0][p].value)]))
-                            .xUnits(d3.time.day)
+                            .xUnits(d3.time.format("%Y"))
                             .gap(this.gap)
                             .yAxisLabel("")
                             .xAxisLabel(this.xLabel)
