--- a/web/polymer-elements/row-chart/row-chart.html
+++ b/web/polymer-elements/row-chart/row-chart.html
@@ -46,7 +46,7 @@
                 var _width = parseInt(this.width);
 
                 this.chart
-                        .width(450).height(300)
+                        .width(this.width).height(300)
                         .dimension(this.dimension)
                         .group(this.group)
                         .ordinalColors(d3.scale.category20().range())
